# Android-UI-Analyser

./: .gitignore  CLAUDE.md  LICENSE  PRD.md  README.md  SMOKE.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/android-ui-analyser/: SKILL.md
.githooks/: pre-commit
docs/: ARCHITECTURE.md  RESEARCH.md
skills/android-ui-analyser/: SKILL.md
src/android_ui_analyser/: __init__.py  annotate.py  cli.py  config.py  daemon.py  device.py  engine.py  errors.py  gate.py  guide.py  hierarchy.py  imaging.py  mcp_server.py  memory.py  merge.py  routing.py  schema.py
src/android_ui_analyser/providers/: __init__.py  base.py  registry.py
src/android_ui_analyser/providers/detection/: __init__.py  omniparser.py  yolo.py
src/android_ui_analyser/providers/grounding/: __init__.py  _common.py  anthropic.py  gemini.py  local_vllm.py  openai.py
src/android_ui_analyser/providers/ocr/: __init__.py  apple_vision.py  easyocr.py  paddleocr.py  rapidocr.py  tesseract.py
tests/: conftest.py  test_annotate.py  test_chain.py  test_cli.py  test_config.py  test_daemon.py  test_detection.py  test_gate.py  test_grounding.py  test_guide.py  test_hierarchy.py  test_mcp.py  test_memory.py  test_merge.py  test_navigation.py  test_ocr.py  test_routing.py  test_schema.py  test_stability.py
tests/fixtures/: compose_no_semantics.json  compose_no_semantics.xml  empty_canvas.json  empty_canvas.xml  normal_views.json  normal_views.xml
