[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "android-ui-analyser"
version = "0.1.0"
description = "Fast, configurable CLI that gives an AI agent structured 'what's on screen and where' for Android UI testing — hierarchy-first, with pluggable vision/OCR/grounding fallbacks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "android-ui-analyser" }]
keywords = ["android", "ui-testing", "uiautomator2", "set-of-marks", "accessibility", "ocr", "agent"]

# Base install is intentionally light. Heavy perception backends live in extras and
# are lazy-imported, so a missing optional dep never breaks the core CLI.
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pillow>=10.0",
    "numpy>=1.26",
    "uiautomator2>=3.0",
    "mcp>=1.2",
]

[project.optional-dependencies]
# --- OCR engines ---
apple = ["pyobjc-framework-Vision>=10.0; sys_platform == 'darwin'", "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'"]
rapidocr = ["rapidocr-onnxruntime>=1.3", "onnxruntime>=1.17"]
paddle = ["paddleocr>=2.7", "paddlepaddle>=2.6"]
tesseract = ["pytesseract>=0.3.10"]
easyocr = ["easyocr>=1.7"]
# --- Detection ---
yolo = ["ultralytics>=8.2", "torch>=2.2"]
omniparser = ["ultralytics>=8.2", "torch>=2.2", "huggingface-hub>=0.23"]
# --- Dev / test ---
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]
all = [
    "android-ui-analyser[apple,rapidocr,paddle,tesseract,easyocr,yolo,omniparser]",
]

[project.scripts]
aua = "android_ui_analyser.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/android_ui_analyser"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter; long strings/URLs allowed

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.11"
packages = ["android_ui_analyser"]
mypy_path = "src"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
